tests/neg/type-nominal.stk
type StringRepr =
    #Raw(length: Int, content: Array[Byte])
  | #Concat(length: Int, lhs: String, rhs: String)


type String <: {
  def length: Int
  def apply(i: Int): Char
  def +(other: String): String
  def substring(from: Int, len: Int): String
}

type StringImpl = {
  val repr: StringRepr
  def length: Int
  def apply(i: Int): Char
  def +(other: String): String
  def substring(from: Int, len: Int): String
}

def test(a: String): StringImpl = a  // error

def test2(a: String): StringRepr = a // error
